fix LoginButton's sizing error and align it to right of the Header

--- a/src/Header.css
+++ b/src/Header.css
@@ -1,27 +1,13 @@
-/* .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-} */
-
-header {  
+.Header-app-header {
   margin-top: 10px;
   background-color: #999;
   padding: 0 10px;
-}
-
-.app-header {
   box-shadow: 6px 6px #222;
   display: flex;
   flex-direction: column;
 }
 
-.title {
+.Header-title {
   font-size: 100px;
   color: #fff;
   font-family: Arvo;
@@ -45,7 +31,7 @@ header {
 }
 
 @media all and (max-width: 1080px) {
-  .title {
+  .Header-title {
     font-size: 60px;
   }
 }
